--- a/assets/stylesheets/level_1.css
+++ b/assets/stylesheets/level_1.css
@@ -75,33 +75,48 @@ table {
 
 #canvas-wrapper{
     display: inline-block;
+    position: relative;
     width: 70%;
-    height: 730px;
+    height: 750px;
+    white-space: nowrap;
 }
 
 #game{
     width: 100%;
     height: 100%;
+    border: 1px solid black;
+
 }
 
 #user-interface{
+    position: absolute;
     display: inline-block;
-    width: 25%;
-    height: 900px;
+    width: 29%;
+    height: 750px;
+    min-height: 300px;
+    background-image: url("../Images/console.png");
+    background-size: auto;
+    background-position:50% 50%;
+    background-size:cover;
 }
 
 #code{
-    width: 100%;
-    height: 80%;
+    margin-top: 11%;
+    margin-left: 15%;
+    width: 70%;
+    height: 600px;
     font-family: "Arial";
     font-size: 16px;
+    background-color: transparent;
+    background-size:cover;
 }
 
 #run{
     margin-top: 5px;
-    width: 50%;
-    height: 46px;
-    font-family: Algerian;
+    margin-left: 40%;
+    width: 150px;
+    height: 30px;
+    font-family: "Maiandra GD";
     font-size: 22px;
     font-weight: bold;
 }
