--- a/assets/stylesheets/level_1.css
+++ b/assets/stylesheets/level_1.css
@@ -70,14 +70,14 @@ table {
 #main-screen{
     width: 100%;
     height: 90%;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 #canvas-wrapper{
     display: inline-block;
     position: relative;
     width: 70%;
-    height: 750px;
+    height: 950px;
     white-space: nowrap;
 }
 
@@ -88,16 +88,16 @@ table {
 
 }
 
-#user-interface{
+#code-area{
     position: absolute;
     display: inline-block;
-    width: 29%;
-    height: 750px;
+    width: 30%;
+    height: 790px;
     min-height: 300px;
     background-image: url("../Images/console.png");
-    background-size: auto;
-    background-position:50% 50%;
+    background-position:center top;
     background-size:cover;
+    background-repeat: no-repeat;
 }
 
 #code{
@@ -106,17 +106,45 @@ table {
     width: 70%;
     height: 600px;
     font-family: "Arial";
-    font-size: 16px;
+    font-size: 22px;
     background-color: transparent;
     background-size:cover;
+
 }
 
 #run{
-    margin-top: 5px;
-    margin-left: 40%;
-    width: 150px;
-    height: 30px;
+    display: inline-block;
+    position: relative;
+    margin-right: 5%;
+    margin-left: 5%;
+    left: 1%;
+    top: 15%;
+    width: 270px;
+    height: 150px;
     font-family: "Maiandra GD";
+    border-radius: 25px;
     font-size: 22px;
     font-weight: bold;
+
+}
+
+#stop{
+    display: inline-block;
+    position: relative;
+    top: 15%;
+    width: 270px;
+    height: 150px;
+    font-family: "Maiandra GD";
+    border-radius: 25px;
+    font-size: 22px;
+    font-weight: bold;
+
+}
+
+.background {
+    z-index: -1;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
 }
