--- a/public/css/level_1.css
+++ b/public/css/level_1.css
@@ -67,69 +67,87 @@ table {
 /*           User styles           */
 /*=================================*/
 
-.portals{
-    position: center;
+#main-screen{
+    margin-top: 3%;
+}
+
+#tips{
+ display: inline-block;
+    width: 15%;
+}
+
+#canvas-wrapper{
+    display: inline-block;
+    position: relative;
+    width: 50%;
+    height: 750px;
+    white-space: nowrap;
+}
+
+#game{
     width: 100%;
-    height: 520px;
-    white-space:nowrap
+    height: 100%;
+    border: 1px solid black;
+
 }
 
-.portal{
-    display:inline-block;
-    vertical-align: top;
-    width: 480px;
-    height: 520px;
+#code-area{
+    position: absolute;
+    display: inline-block;
+    width: 31%;
+    height: 790px;
+    min-height: 300px;
+    background-image: url("/assets/console.png");
+    background-position:center top;
+    background-size:cover;
+    background-repeat: no-repeat;
 }
 
-/*=================================*/
-/*            Portals              */
-/*=================================*/
-
-.level-label,
-.level-name,
-.btn-play{
-    position: center;
-    text-align: center;
-}
-
-.btn-play{
-    font-family: Algerian;
+#code{
+    margin-top: 11%;
+    margin-left: 15%;
+    width: 70%;
+    height: 600px;
+    font-family: "Arial";
     font-size: 22px;
+    background-color: transparent;
+    background-size:cover;
+
 }
 
-.level-name{
-    font-family: Arial;
+#run{
+    display: inline-block;
+    position: relative;
+    margin-right: 5%;
+    margin-left: 5%;
+    top: 15%;
+    width: 40%;
+    height: 20%;
+    margin-left: 8%;
+    font-family: "Maiandra GD";
+    border-radius: 25px;
     font-size: 22px;
-}
-
-.portal{
-    /*background-image: url("");*/
+    font-weight: bold;
 
 }
 
-.logo{
-    border-top: 4px solid #648880;
-    font-size: 40px;
-    font-weight: 100;
-    letter-spacing: .5px;
-    line-height: 44px;
-    padding: 40px 0 22px 0;
-    text-transform: uppercase;
+#stop{
+    display: inline-block;
+    position: relative;
+    top: 15%;
+    width: 40%;
+    height: 20%;
+    font-family: "Maiandra GD";
+    border-radius: 25px;
+    font-size: 22px;
+    font-weight: bold;
+
 }
 
-header{
-    height: 250px;
+.background {
+    z-index: -1;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
 }
-
-footer{
-    height: 150px;
-}
-
-body{
-    /*background-image: url("../Images/background.png");*/
-}
-
-/*=================================*/
-/*           Asides                */
-/*=================================*/
-
