--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
-  License: none (public domain)
-*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -67,84 +64,69 @@ table {
 /*           User styles           */
 /*=================================*/
 
-#main-screen{
+.portals{
+    position: center;
     width: 100%;
-    height: 90%;
-    margin-top: 3%;
+    height: 520px;
+    white-space:nowrap
 }
 
-#canvas-wrapper{
-    display: inline-block;
-    position: relative;
-    width: 70%;
-    height: 950px;
-    white-space: nowrap;
+.portal{
+    display:inline-block;
+    vertical-align: top;
+    width: 480px;
+    height: 520px;
 }
 
-#game{
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
+/*=================================*/
+/*            Portals              */
+/*=================================*/
 
+.level-label,
+.level-name,
+.btn-play{
+    position: center;
+    text-align: center;
 }
 
-#code-area{
-    position: absolute;
-    display: inline-block;
-    width: 30%;
-    height: 790px;
-    min-height: 300px;
-    background-image: url("../Images/console.png");
-    background-position:center top;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-#code{
-    margin-top: 11%;
-    margin-left: 15%;
-    width: 70%;
-    height: 600px;
-    font-family: "Arial";
+.btn-play{
+    font-family: Algerian;
     font-size: 22px;
-    background-color: transparent;
-    background-size:cover;
+}
+
+.level-name{
+    font-family: Arial;
+    font-size: 22px;
+}
+
+.portal{
+    /*background-image: url("");*/
 
 }
 
-#run{
-    display: inline-block;
-    position: relative;
-    margin-right: 5%;
-    margin-left: 5%;
-    left: 1%;
-    top: 15%;
-    width: 270px;
+.logo{
+    border-top: 4px solid #648880;
+    font-size: 40px;
+    font-weight: 100;
+    letter-spacing: .5px;
+    line-height: 44px;
+    padding: 40px 0 22px 0;
+    text-transform: uppercase;
+}
+
+header{
+    height: 250px;
+}
+
+footer{
     height: 150px;
-    font-family: "Maiandra GD";
-    border-radius: 25px;
-    font-size: 22px;
-    font-weight: bold;
-
 }
 
-#stop{
-    display: inline-block;
-    position: relative;
-    top: 15%;
-    width: 270px;
-    height: 150px;
-    font-family: "Maiandra GD";
-    border-radius: 25px;
-    font-size: 22px;
-    font-weight: bold;
-
+body{
+    /*background-image: url("../Images/background.png");*/
 }
 
-.background {
-    z-index: -1;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-}
+/*=================================*/
+/*           Asides                */
+/*=================================*/
+
