--- a/public/stylesheets/level_1.css
+++ b/public/stylesheets/level_1.css
@@ -98,7 +98,7 @@ table {
     width: 31%;
     height: 790px;
     min-height: 300px;
-    background-image: url("/assets/console.png");
+    background-image: url("../assets/console.png");
     background-position:center top;
     background-size:cover;
     background-repeat: no-repeat;
