--- a/public/stylesheets/registrate.css
+++ b/public/stylesheets/registrate.css
@@ -64,13 +64,15 @@ html {
 #regForm {
     width: 1110px;
     height: 750px;
-    background-image: url("../assets/registrate_menu.png");
+    background-image: url("../assets/login_registrate_menu.png");
     background-size: cover;
     background-repeat: no-repeat;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: none;
+    z-index: 21;
 }
 
 #password {
