--- a/public/stylesheets/level_1.css
+++ b/public/stylesheets/level_1.css
@@ -84,12 +84,11 @@ body{
 #tips{
     margin-top: 5px;
     display: block;
-    border: 1px solid black;
-    width: 1250px;
-    height: 160px;
+    width: 66%;
+    height: 157px;
     background-image: url("../assets/tips_task.png");
     background-position:center top;
-    background-size: contain;
+    background-size: auto auto;
     background-repeat: no-repeat;
 }
 
@@ -107,53 +106,70 @@ body{
     position: absolute;
     display: inline-block;
     margin-left: 5px;
-    width: 647px;
-    height: 920px;
+    width: 34%;
+    height: 98.5%;
     min-height: 300px;
-    border: 1px solid black;
     background-image: url("../assets/console.png");
     background-position:center top;
-    background-size: contain;
+    background-size: auto auto;
     background-repeat: no-repeat;
 }
 
 #code{
-    width: 642px;
-    height: 914px;
+    width: 98%;
+    margin-top: 11%;
+    margin-left: 1%;
+    height: 84%;
     font-family: "Arial";
     font-size: 22px;
     background-color: transparent;
-    background-size:cover;
-
+    border: none;
+    border-color: Transparent;
 }
 
-#run{
+#btn-execute{
     display: inline-block;
     position: relative;
-    margin-right: 5%;
-    margin-left: 5%;
-    top: 15%;
-    width: 40%;
-    height: 20%;
-    margin-left: 8%;
-    font-family: "Maiandra GD";
-    border-radius: 25px;
-    font-size: 22px;
+    margin-top: 1%;
+    margin-right: 1%;
+    margin-left: 68.6%;
+    top: -0.3%;
+    width: 27.5%;
+    height: 4.5%;
+    text-decoration: none;
+    font: 20px "Jokerman", Helvetica, Arial, sans-serif;
     font-weight: bold;
-
+    line-height: 40px;
+    text-align: center;
 }
 
-#stop{
+#label_tips_task{
     display: inline-block;
     position: relative;
-    top: 15%;
-    width: 40%;
-    height: 20%;
-    font-family: "Maiandra GD";
-    border-radius: 25px;
-    font-size: 22px;
+    margin-top: 7%;
+    margin-left: 79.6%;
+    top: -0.3%;
+    width: 18.3%;
+    height: 25%;
+    text-decoration: none;
+    font: 20px "Jokerman", Helvetica, Arial, sans-serif;
     font-weight: bold;
+    line-height: 40px;
+    text-align: center;
+    border: 4px solid #989695;
+    background: #4ad0e5;
+}
 
+.controls,
+.controls:hover {
+    color: #555;
+    border: 4px solid #989695;
+    background: #39e539;
+}
+
+.controls:hover {
+    background: #32ab22;
+    color: white;
 }
 
 .background {
