--- a/public/stylesheets/level_1.css
+++ b/public/stylesheets/level_1.css
@@ -5,7 +5,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong, sub, sup, tt, let,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -111,7 +111,7 @@ body{
     min-height: 300px;
     background-image: url("../assets/console.png");
     background-position:center top;
-    background-size: auto auto;
+    background-size: 100% auto;
     background-repeat: no-repeat;
 }
 
@@ -135,7 +135,7 @@ body{
     margin-left: 68.6%;
     top: -0.3%;
     width: 27.5%;
-    height: 4.5%;
+    height: 6.5%;
     text-decoration: none;
     font: 20px "Jokerman", Helvetica, Arial, sans-serif;
     font-weight: bold;
