--- a/public/stylesheets/level_PVP.css
+++ b/public/stylesheets/level_PVP.css
@@ -130,12 +130,12 @@ body{
 #btn-execute{
     display: inline-block;
     /*position: relative;*/
-    margin-bottom: 10px;
+    margin-top: 6%;
     margin-right: 1%;
     margin-left: 68.6%;
     top: -0.3%;
     width: 27.5%;
-    height: 6.5%;
+    height: 40px;
     text-decoration: none;
     font: 20px "Jokerman", Helvetica, Arial, sans-serif;
     font-weight: bold;
@@ -146,7 +146,7 @@ body{
 #label_tips_task{
     display: inline-block;
     position: relative;
-    margin-top: 7%;
+    margin-top: 8%;
     margin-left: 79.6%;
     top: -0.3%;
     width: 18.3%;
