--- a/public/stylesheets/level_1.css
+++ b/public/stylesheets/level_1.css
@@ -67,12 +67,17 @@ table {
 /*           User styles           */
 /*=================================*/
 
+html{
+    overflow: hidden;
+}
+
 body{
     /*background-image: url("../assets/web_page_skeleton.png");*/
     /*background-position:center top;*/
     /*background-size:cover;*/
     /*background-repeat: no-repeat;*/
 }
+
 
 #main-screen{
     margin-top: 0.5%;
@@ -83,8 +88,9 @@ body{
 
 #tips{
     margin-top: 5px;
+    position: absolute;
     display: block;
-    width: 66%;
+    width: 101%;
     height: 157px;
     background-image: url("../assets/tips_task.png");
     background-position:center top;
@@ -111,7 +117,7 @@ body{
     min-height: 300px;
     background-image: url("../assets/console.png");
     background-position:center top;
-    background-size: 100% auto;
+    background-size: auto auto;
     background-repeat: no-repeat;
 }
 
@@ -135,7 +141,7 @@ body{
     margin-left: 68.6%;
     top: -0.3%;
     width: 27.5%;
-    height: 6.5%;
+    height: 4.5%;
     text-decoration: none;
     font: 20px "Jokerman", Helvetica, Arial, sans-serif;
     font-weight: bold;
@@ -194,7 +200,7 @@ body{
 
     border: 1px solid #b3c9ce;
     border-radius: 4px;
-    text-align: center;
+    text-align: right;
     font: italic 16px/1.3 sans-serif;
     color: #333;
     background: #fff;
