--- a/public/stylesheets/level_1_test.css
+++ b/public/stylesheets/level_1_test.css
@@ -68,24 +68,23 @@ table {
 /*=================================*/
 
 body{
-    background-color: #d3b2cb;
-    /*background-image: url("../assets/arena background warhammer-40-000.png");*/
-    /*background-size: cover;*/
+    height: 100vh;
     /*background-image: url("../assets/web_page_skeleton.png");*/
     /*background-position:center top;*/
     /*background-size:cover;*/
     /*background-repeat: no-repeat;*/
 }
 
-#main-screen{
-    margin-top: 0.5%;
-    margin-left: 0.30%;
-    margin-bottom: 0.5%;
-    margin-right: 0.30%;
+#grid{
+    width: 100%;
+    height: 100%;
+    /*margin-top: 0.5%;*/
+    /*margin-left: 0.30%;*/
+    /*margin-bottom: 0.5%;*/
+    /*margin-right: 0.30%;*/
 }
 
 #tips{
-    /*margin-top: 5px;*/
     display: block;
     width: 100%;
     height: 100%;
@@ -96,12 +95,9 @@ body{
 }
 
 #canvas-wrapper{
-    /*display: inline-block;*/
     display: block;
     position: relative;
     white-space: nowrap;
-    width: 100%;
-    height: 100%;
 }
 
 #game{
@@ -110,27 +106,26 @@ body{
     position: relative;
     white-space: nowrap;
     width: 100%;
-    height: 100%;
-
+    height: 750px;
 }
 
 #code-area{
     display: block;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/console1.png");
+    background-image: url("../assets/consolee.png");
     background-position:center top;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 #code{
-    width: 94%;
-    margin-top: 12%;
-    margin-left: 3%;
-    height: 84%;
-    font-family: "Arial";
-    font-size: 22px;
+    width: 92%;
+    margin-top: 17%;
+    margin-left: 4%;
+    height: 83%;
+    font-family: "Book Antiqua", fantasy;
+    font-size: 30px;
     background-color: transparent;
     border: none;
     border-color: Transparent;
@@ -139,8 +134,9 @@ body{
 #btn-execute{
     display: inline-block;
     /*position: relative;*/
-    margin-top: 2%;
-    margin-left: 68.6%;
+    margin-top: 4%;
+
+    margin-left: 67%;
     top: -0.3%;
     width: 27.5%;
     height: 40px;
@@ -152,20 +148,17 @@ body{
 }
 
 #label_tips_task{
-    display: inline-block;
-    position: relative;
-    margin-top: 5%;
+    display: block;
+    margin-top: 1.8%;
     margin-left: 79.6%;
-    top: -0.3%;
     width: 18.3%;
-    height: 30%;
+    height: 67%;
     text-decoration: none;
-    font: 20px "Jokerman", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    line-height: 40px;
+    font: 30px "Arial";
+    line-height: 120px;
     text-align: center;
     border: 4px solid #989695;
-    background: #4ad0e5;
+    background: #d3ecef;
 }
 
 .controls,
@@ -188,28 +181,17 @@ body{
     height:100%;
 }
 
-#exitArena {
-    display: inline-block;
-    /*position: relative;*/
-    margin-top: 0.5%;
-    margin-left: 36%;
-    top: -0.3%;
-    width: 27.5%;
-    height: 40px;
-    text-decoration: none;
-    font: 20px "Jokerman", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    line-height: 40px;
-    text-align: center;
-}
-
 /*=================================*/
 /*           Tooltips              */
 /*=================================*/
 
 .tooltip {
     position: fixed;
-    z-index: 100;
+    display: inline-block;
+    top: 15%;
+    left: 8%;
+    width: 1100px;
+    height: 600px;
     /* подсказка должна перекрывать другие элементы */
 
     padding: 10px 20px;
@@ -230,10 +212,34 @@ body{
     font-size: 18px;
 }
 
+.btnTooltip{
+    padding: 10px 20px;
+    /* красивости... */
+    width: 100px;
+    height: 30px;
+    margin-top: 560px;
+    margin-left: 990px;
 
+    border: 1px solid #b3c9ce;
+    border-radius: 4px;
+    color: #333;
+    background: #fff;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+
+    text-decoration: none;
+    font: 20px "Jokerman", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    line-height: 35px;
+    text-align: center;
+}
+
+#btn_tooltip_p{
+    margin-left: 830px;
+}
 /*=================================*/
 /*          GRID            */
 /*=================================*/
+
 body {font: 18px Verdana sans-serif;}
 
 .grid {
@@ -243,9 +249,10 @@ body {font: 18px Verdana sans-serif;}
 
     grid-gap: 0.2vw;
 
-    grid-template-columns: 2fr 1.25fr;
+    grid-template-columns: 1fr 600px;
 
-    grid-template-rows: 70px 750px 120px;
+    /*grid-template-columns: 1400px 643px;*/
+    grid-template-rows: 85px 750px 183px;
     /*grid-template-rows: auto [header-bottom  main-top] 1fr [main-bottom];*/
 
     grid-template-areas: "banner    banner"
@@ -253,7 +260,12 @@ body {font: 18px Verdana sans-serif;}
 }
 
 .grid > :nth-child(1) {
-    background-color: #989695;
+    background-color: #ffecde;
+
+    background-image: url("../assets/top_menu.png");
+    background-position:center top;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     grid-column: 1; /* то же, что 1 */
     grid-column-end: 3; /* то же, что 3 */
 
@@ -285,7 +297,149 @@ body {font: 18px Verdana sans-serif;}
 }
 
 .grid > :nth-child(5) {
+    background-color: #ffecde;
+
+    background-image: url("../assets/low_menu.png");
+    background-position:center top;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+
     grid-row-start: 3;  /* то же, что 2 */
     grid-row-end: 4;  /* то же, что 3 */
     /* колонка не задана, поэтому берется первая свободная */
+}
+
+/*=================================*/
+/*           TopMenu               */
+/*=================================*/
+
+#crystalCounter{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    margin-top: 6%;
+    font-size: 40px;
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+#crystalLabel{
+    background-image: url("../assets/crystal_score.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
+
+
+
+#tools_top_menu{
+    background-image: url("../assets/tools_icon.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
+
+
+#timer_icon{
+    background-image: url("../assets/time_linit.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
+
+
+
+.grid_top_menu {
+    display: grid;
+    width: 100%;
+    height: 100%;
+
+    /*margin-left: 0.5%;*/
+    /*margin-right: 2%;*/
+    margin-top: 0.8%;
+    grid-gap: 0.2vw;
+
+    grid-template-columns: 4% 4% 4% 8% 70% 4%;
+
+    /*grid-template-columns: 1400px 643px;*/
+    grid-template-rows: 50px;
+    /*grid-template-rows: auto [header-bottom  main-top] 1fr [main-bottom];*/
+}
+
+.grid_top_menu > :nth-child(1) {
+    background-color: rgba(238, 238, 238, 0);
+
+
+    margin-left: 20%;
+
+    grid-row-start: 1;  /* то же, что 2 */
+    grid-row-end: 3;  /* то же, что 3 */
+    /* колонка не задана, поэтому берется первая свободная */
+}
+
+.grid_top_menu > :nth-child(2) {
+    background-color: rgba(204, 204, 255, 0);
+
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
+.grid_top_menu > :nth-child(3) {
+    background-color: rgba(204, 204, 255, 0);
+
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
+.grid_top_menu > :nth-child(4) {
+    background-color: rgba(204, 204, 255, 0);
+
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
+.grid_top_menu > :nth-child(5) {
+    background-color: rgba(204, 204, 255, 0);
+
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.grid_top_menu > :nth-child(6) {
+    background-color: rgba(204, 204, 255, 0);
+
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
+/*=================================*/
+/*           Timer                 */
+/*=================================*/
+
+#timerForm{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+#timerInput{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    font-size: 40px;
+    border: none;
+    font-family: Arial, sans-serif;
+    text-align: center;
 }
